Minor Portal Editor CSS and content fixes
- Fix issues with portal editor on mobile (all themes)
- Fix issue where minimal nav text was too light to read in the default themes
- Change the description and "New" badge in the EditCollectionView
- Remove collection imported with Require that was not required in the QueryBuilderView
- Move the QueryBuilder template into its own subdirectory

Relates to issue #1577

--- a/src/css/metacatui-common.css
+++ b/src/css/metacatui-common.css
@@ -412,6 +412,7 @@ header .citation {
 #Content > .alert-container {
     max-width: 90%;
     margin-left: 5%;
+		margin-top: 2rem;
 }
 body > .alert-container.important-app-message{
   bottom: 0px;
