--- a/src/css/metacatui-common.responsive.css
+++ b/src/css/metacatui-common.responsive.css
@@ -594,6 +594,12 @@
 
 	/*************** Portal Editor ***********/
 
+	/* Decrease the padding so that content has more room on narrow screens */
+	.port-editor-section.port-editor-data {
+		padding: 5px;
+		margin-right: 30px;
+	}
+
 	.port-editor-md textarea.markdown {
 		margin: 0;
 		width: 100%;
@@ -827,20 +833,23 @@
 		
 		/* Query rules in the query builder */
 		.query-rule {
-			/* display: grid;
-			grid-template-columns: minmax(2.5rem, 4rem) 1fr 0.5fr 1fr 2rem;
-			grid-template-rows: 1fr;
-			grid-template-areas: "info field operator value remove";
-			grid-gap: 2rem;
-			align-items: top; */
 			
-			grid-template-columns: minmax(2.5rem, 4rem) 1fr 2rem;
-			grid-template-rows: 1fr 1fr 1fr;
-			gap: 1rem 1rem;
+			grid-template-columns: 2.2rem auto 1.3rem;
+			grid-template-rows: auto;
+			gap: 0.5rem 1rem;
 			grid-template-areas:
 				"info field remove"
 				"info operator remove"
 				"info value remove";	
+		}
+		
+		.rules-container {
+			padding: 2rem 0.7rem 2rem 1rem;
+			grid-gap: 2rem;
+		}
+		
+		.query-rule .rule-info {
+			font-size: 0.7rem;
 		}
 
 }
